--- a/Translator.html
+++ b/Translator.html
@@ -43,30 +43,30 @@
         resolve =>
           Number(win.TKK.split(".")[0]) === Math.floor(Date.now() / 3600000)
             ? resolve()
-            : fetch("https://translate.google.com")
-                .then(resp => resp.text())
-                .then(text => {
-                  const code = text.match(/TKK=(.*?)\(\)\)'\);/g);
-                  if (code) {
-                    eval(code[0]);
-                    /* eslint-disable no-undef */
-                    if (typeof TKK !== "undefined") {
-                      win.TKK = TKK;
-                    }
-                    /* eslint-enable no-undef */
+            : fetch("https://crossorigin.me/https://translate.google.com")
+              .then(resp => resp.text())
+              .then(text => {
+                const code = text.match(/TKK=(.*?)\(\)\)'\);/g);
+                if (code) {
+                  eval(code[0]);
+                  /* eslint-disable no-undef */
+                  if (typeof TKK !== "undefined") {
+                    win.TKK = TKK;
                   }
-                  resolve();
-                })
+                  /* eslint-enable no-undef */
+                }
+                resolve();
+              })
       );
 
     const translate = text =>
       new Promise(resolve =>
         updateTKK().then(() =>
           fetch(
-            "https://translate.google.com/translate_a/single?client=t&dt=ld&dt=rm&dt=t" +
-              sM(text) +
-              "&q=" +
-              encodeURIComponent(text)
+            "https://crossorigin.me/https://translate.google.com/translate_a/single?client=t&dt=ld&dt=rm&dt=t" +
+            sM(text) +
+            "&q=" +
+            encodeURIComponent(text)
           )
             .then(resp => resp.json())
             .then(resolve)
@@ -85,12 +85,12 @@
 
     function sM(a) {
       var yr = null;
-      var wr = function(a) {
-          return function() {
-            return a;
-          };
-        },
-        xr = function(a, b) {
+      var wr = function (a) {
+        return function () {
+          return a;
+        };
+      },
+        xr = function (a, b) {
           for (var c = 0; c < b.length - 2; c += 3) {
             var d = b.charAt(c + 2),
               d = "a" <= d ? d.charCodeAt(0) - 87 : Number(d),
@@ -120,13 +120,13 @@
         128 > l
           ? (e[f++] = l)
           : (2048 > l
-              ? (e[f++] = (l >> 6) | 192)
-              : (55296 == (l & 64512) && g + 1 < a.length && 56320 == (a.charCodeAt(g + 1) & 64512)
-                  ? ((l = 65536 + ((l & 1023) << 10) + (a.charCodeAt(++g) & 1023)),
-                    (e[f++] = (l >> 18) | 240),
-                    (e[f++] = ((l >> 12) & 63) | 128))
-                  : (e[f++] = (l >> 12) | 224),
-                (e[f++] = ((l >> 6) & 63) | 128)),
+            ? (e[f++] = (l >> 6) | 192)
+            : (55296 == (l & 64512) && g + 1 < a.length && 56320 == (a.charCodeAt(g + 1) & 64512)
+              ? ((l = 65536 + ((l & 1023) << 10) + (a.charCodeAt(++g) & 1023)),
+                (e[f++] = (l >> 18) | 240),
+                (e[f++] = ((l >> 12) & 63) | 128))
+              : (e[f++] = (l >> 12) | 224),
+              (e[f++] = ((l >> 6) & 63) | 128)),
             (e[f++] = (l & 63) | 128));
       }
       a = b;
