--- a/Translator.html
+++ b/Translator.html
@@ -151,10 +151,10 @@
       if (node.tagName === "P")
         translate(node.innerHTML).then(data =>
           window.autoTranslate
-            ? node.addEventListener("dblclick", () =>
+            ? b.appendChild(document.createElement("div")).textContent = data[0][0][0]
+            : node.addEventListener("dblclick", () =>
               b.appendChild(document.createElement("div")).textContent = data[0][0][0]
             )
-            : b.appendChild(document.createElement("div")).textContent = data[0][0][0]
         );
     }).observe(b, { childList: true });
 
