--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       }
     }).observe(b, { childList: true });
 
-    Object.defineProperty(window, "toggleAutoTranslate", { get: () => window.autoTranslate = !window.autoTranslate });
+    Object.defineProperty(window, "ToggleAutoTranslate", { get: () => window.autoTranslate = !window.autoTranslate });
 
   /* End of the Fun Stuff */
   </script>
