--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     let autoTranslate = false;
     Object.defineProperty(window, "ToggleAutoTranslate", { get: () => autoTranslate = !autoTranslate });
-    let proxy = "https://crossorigin.me";
+    let proxy = "https://cors-anywhere.herokuapp.com";
 
     /**
      * https://translate.google.com/translate/releases/twsfe_w_20160620_RC00/r/js/desktop_module_main.js
